@@ -1,3 +1,11 @@
+2003-04-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* tools/mkhive/infcache.c (InfpCacheFindSection, InfpCacheFindKeyLine,
+	InfFindFirstLine, InfFindFirstMatchLine, InfFindNextMatchLine,
+	InfGetLineCount): Change call to stricmp() to strcasecmp().
+	* tools/mkhive/reginf.c (GetRootKey): Ditto.
+	* tools/mkhive/registry.c (RegSetValue, RegQueryValue): Ditto.
+
 2003-04-13  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* ntoskrnl/kd/gdbstub.c (KdEnterDebuggerException): Fix signed/unsigned
